feat: add champion masteries endpoint for a summoner
